# enterprise-mock

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: acl.py  auth.py  config.py  main.py  mcp_spec.py  oauth.py  openapi.py  pagination.py  sigv4.py  store.py  synth.py  validation.py
app/importer/: __init__.py  byo.py  erb.py
app/routers/: atlassian.py  github.py  google.py  notion.py  oauth.py  s3.py  slack.py
examples/bring-your-own-corpus/: README.md  _mockserver.py  run.py  sample_corpus.jsonl
examples/import-enterpriserag-bench/: README.md  run.py
examples/using-llamaindex-readers/: README.md  _llamaindex.py  confluence.py  gdrive.py  github.py  gmail.py  jira.py  notion.py  s3.py  slack.py
examples/using-mcp-with-agents/: README.md  _agent.py  _bridge.py  _mockserver.py  _openapi_bridge.py  _servers.py  agent_anthropic.py  agent_openai.py  atlassian.py  atlassian_server.py  drive.py  gdrive.py  github.py  gmail.py  notion.py  notion_server.py  s3.py  slack.py
examples/using-mirage/: README.md  _mirage.py  gdrive.py  github.py  gmail.py  notion.py  s3.py  slack.py  unified.py
examples/using-official-sdk/: README.md  _mockserver.py  confluence.py  gdrive.py  github.py  gmail.py  jira.py  notion.py  s3.py  slack.py
schemas/: README.md  confluence.schema.json  github.schema.json  gmail.schema.json  google_drive.schema.json  jira.schema.json  notion.schema.json  s3.schema.json  slack.schema.json
tests/: _openapi_bridge_probe.py  conftest.py  test_acl.py  test_editor_apis.py  test_endpoints.py  test_fidelity.py  test_importer_byo.py  test_importer_erb.py  test_llamaindex.py  test_mcp.py  test_mcp_notion.py  test_mcp_spec.py  test_oauth.py  test_openapi.py  test_openapi_bridge.py  test_pagination.py  test_schema.py  test_sdk.py  test_search.py  test_sigv4.py  test_store.py  test_store_s3.py  test_synth.py
