[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-mock"
version = "0.1.0"
description = "Read-only mock server serving EnterpriseRAG-Bench data in the shape of real Slack/Gmail/Drive/GitHub/Jira/Confluence/Notion/S3 APIs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "khj809", email = "onsealeatang@gmail.com" },
]
keywords = ["mock", "rag", "enterprise-search", "slack", "gmail", "google-drive", "jira", "confluence", "github", "notion", "s3", "amazon-s3", "benchmark"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Testing :: Mocking",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "jsonschema>=4.20",
    "pyjwt[crypto]>=2.8",
    "httpx>=0.27",  # /batch self-dispatches sub-requests in-process via httpx.ASGITransport
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
# Official SDKs used by examples/using-official-sdk/, tests/test_sdk.py (one per service) + the ACL demo.
examples = [
    "httpx>=0.27",
    "slack_sdk>=3.27",
    "PyGithub>=2.3",
    "atlassian-python-api>=3.41",
    "google-api-python-client>=2.120",
    "google-auth>=2.29",
    "notion-client>=3.1",
    "boto3>=1.34",
]
# Mirage examples (examples/using-mirage/): drive the mock through mirage's virtual filesystem.
# The [fuse] extra (mfusepy) powers the optional `--fuse` real-OS-mount path; mounting also needs
# an OS FUSE driver (macFUSE / fuse3), but the pure-Python dep installs fine everywhere.
# Installed from GitHub (package under python/): the examples use SlackConfig.base_url, which
# PyPI 0.0.3 predates. Pinned to a commit for reproducibility.
mirage = [
    "mirage-ai[fuse] @ git+https://github.com/strukto-ai/mirage.git@6846ffbe#subdirectory=python",
]
# MCP agent examples (examples/using-mcp-with-agents/): drive the mock through a real MCP server.
mcp = [
    "mcp>=1.2",
    "anthropic[mcp]>=0.40",
    "openai>=1.40",
    "openai-agents>=0.1",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/brekkylab/enterprise-mock"
Repository = "https://github.com/brekkylab/enterprise-mock"
Issues = "https://github.com/brekkylab/enterprise-mock/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
